finish distractor analysis- sft and sequential

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -53,6 +53,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd84a532-8f76-4873-865b-3aaeb2d86545",
+   "metadata": {},
+   "source": [
+    "### Sequential Model Distractors Analysis "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "1f54d14b-4a9d-4895-895f-b0576954ad9f",
@@ -758,6 +766,256 @@
       ]
      },
      "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(inter_pred_dis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2c50446-d358-4945-ac8c-d7f7ea3eafb1",
+   "metadata": {},
+   "source": [
+    "### Single Fine Tuned Model Distractors Analysis "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "81394f08-2624-42cd-b929-fb37fad6fe01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dec81702f7dd4cf699116673e23185f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/1.74k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30c8260d8e1945828a46b6b1111bfc29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/558M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d8e4b1ff4f3411dad8ed45e1729b8fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/292 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_all = BartForConditionalGeneration.from_pretrained(\"b-b-brouwer/CL_base\").to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "92f025e8-32f6-4fda-9976-b9ce38d6b60e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Question:Question: Which law states that an object will not change its motion unless a force acts on it? Answer: first law Distractor1:  third law and second law of inertia Distractor2: fourth law and third law of relativity Distractor3: law and law']"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def inference_sft(context):\n",
+    "    text = \"Support: {}\".format(context)\n",
+    "    max_length = 600\n",
+    "    tokenized_inputs = tokenizer.encode_plus(text, return_tensors=\"pt\", max_length=max_length, truncation=True, padding='max_length').to(device) \n",
+    "\n",
+    "    output = model_all.generate(input_ids=tokenized_inputs[\"input_ids\"], max_length=1024)\n",
+    "    \n",
+    "    res = tokenizer.batch_decode(output, skip_special_tokens=True, clean_up_tokenization_spaces=True)\n",
+    "    return res\n",
+    "    \n",
+    "inference_sft(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "cae2c8de-5c89-467a-870a-a8184d4f9bf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ada68bfec6ac468f83541736d39322dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/881 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def infer_all_sft(examples):\n",
+    "    result = inference_sft(examples['support'])\n",
+    "\n",
+    "    question_pattern = r\"Question: (.+?\\?)\"\n",
+    "    answer_pattern = r\"Answer: (.+?)(?= Distractor\\d+: |$)\"\n",
+    "    dis1_pattern = r\"Distractor1: (.+)\"\n",
+    "    dis2_pattern = r\"Distractor2: (.+)\"\n",
+    "    dis3_pattern = r\"Distractor3: (.+)\"\n",
+    "\n",
+    "    question = \"\"\n",
+    "    answer = \"\"\n",
+    "    \n",
+    "    question_match = re.search(question_pattern, result[0])\n",
+    "    answer_match = re.search(answer_pattern, result[0])\n",
+    "\n",
+    "    if question_match:\n",
+    "        question = question_match.group(1)\n",
+    "    if answer_match:\n",
+    "        answer = answer_match.group(1)\n",
+    "\n",
+    "    distractor_pattern = r\"Distractor\\d+: (.+?)(?= Distractor|$)\"\n",
+    "    distractors = re.findall(distractor_pattern, result[0])\n",
+    "    \n",
+    "    return {\n",
+    "        \"pred_answer\": answer if answer != None else \"\",\n",
+    "        \"pred_question\": question,\n",
+    "        \"pred_distractors1\": distractors[0] if len(distractors) > 0 else \"\",\n",
+    "        \"pred_distractors2\": distractors[1] if len(distractors) > 1 else \"\",\n",
+    "        \"pred_distractors3\": distractors[2] if len(distractors) > 2 else \"\",\n",
+    "    }\n",
+    "\n",
+    "test_data_pred = test_data.map(infer_all_sft)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "eac2b142-8171-4d1c-9c48-60d3f4db8de6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer_dis = []\n",
+    "inter_dis = []\n",
+    "answer_pred_dis = []\n",
+    "inter_pred_dis = []\n",
+    "for data in test_data_pred:\n",
+    "    answer_dis.append(calc_vector_answer_dis(data))\n",
+    "    inter_dis.append(calc_vector_inter_dis(data))\n",
+    "    answer_pred_dis.append(calc_vector_answer_dis_pred(data))\n",
+    "    inter_pred_dis.append(calc_vector_inter_dis_pred(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "84a71b23-9749-4dc5-87ec-8f6273393ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5800197711281374"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(answer_dis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "ef8f5b14-6d18-4fa7-81c9-ea1a9b0b47a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5230395514299552"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(inter_dis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "aba40765-a769-40cf-9b20-92165576ec94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5562485193243836"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(answer_pred_dis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "6ded280e-83f0-45fe-9b3c-bcd7009e91b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5263792485850741"
+      ]
+     },
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
