add Sequential code

--- a/Challenge.ipynb
+++ b/Challenge.ipynb
@@ -15,6 +15,48 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2dcd8ddcdd5435ca6e0f32b0d88371f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/1.73k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ddb3bf932f874faf9e9054ec97913080",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/1.63G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f2852739027472c99629c945f9b96a8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/292 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -52,7 +94,7 @@
     "\n",
     "# Load the model from the saved path\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
-    "model_WEB_large = BartForConditionalGeneration.from_pretrained('WEB_large/WEB_large/model_WEB_large_test').to(device)\n",
+    "model_WEB_large = BartForConditionalGeneration.from_pretrained('rizkiduwinanto/WEB_large').to(device)\n",
     "model_name_large = \"facebook/bart-large\"\n",
     "model_QA_large = BartForConditionalGeneration.from_pretrained(\"b-b-brouwer/CL_large\").to(device)\n",
     "tokenizer_large = BartTokenizer.from_pretrained(model_name_large)\n",
@@ -196,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "b2c67444-d827-490f-a4d5-ebf70d4aca7b",
    "metadata": {},
    "outputs": [
@@ -204,8 +246,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
-      "Running on public URL: https://312ff98db309950784.gradio.live\n",
+      "Running on local URL:  http://127.0.0.1:7862\n",
+      "Running on public URL: https://5f354faa57360ae83d.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -213,7 +255,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://312ff98db309950784.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://5f354faa57360ae83d.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -226,7 +268,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,9 +305,9 @@
     "\n",
     "    def check(correct_answer, answer):\n",
     "        if answer == correct_answer:\n",
-    "            return gr.Text(value='correct', interactive=True, visible=True)\n",
+    "            return gr.Text(value='correct', label=\"result\", interactive=True, visible=True)\n",
     "        else:\n",
-    "            return gr.Text(value='wrong', interactive=True, visible=True)\n",
+    "            return gr.Text(value='wrong', label=\"result\", interactive=True, visible=True)\n",
     "\n",
     "    def on_submit(url, topic):\n",
     "        question_text, answer, choice1_text, choice2_text, choice3_text, choice4_text = prompt(url, topic)\n",
@@ -291,6 +333,14 @@
     "    \n",
     "demo.launch(share=True)\t"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c648c66-8c30-4f74-a09e-421be4e0b9cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
