add better pipeline and data to save time/reproducibility

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -1303,27 +1303,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "id": "adca6c34-5872-4d28-8e3b-3fde8d3fd3de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02bc3d4100474cc6af56daf7275cc4d4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/881 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# test_data_single_large = test_data.map(infer_all_sft, fn_kwargs={\"model\": model_single_large})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "id": "dc966792-7df8-405c-955d-1c2911636225",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "108952e26af14ed9803cca4628d7de73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/881 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "test_data_single_large = load_from_disk(\"data/res-large-single\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "id": "b3f8e242-a9e7-4da0-b314-7229e3e601b3",
    "metadata": {},
    "outputs": [],
@@ -1341,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "id": "37b98f68-91f4-48aa-accc-4d88c7f662bc",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1381,7 @@
        "0.5800197711281374"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "id": "2ef34fb3-b855-42d0-b718-73f96c044be3",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1402,7 @@
        "0.5230395514299552"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,17 +1413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "id": "8bc9a621-8cb0-47e4-ab53-e3e091dc9476",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5562485193243836"
+       "0.49129048015920895"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,17 +1434,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "id": "d688c19f-2b3c-4a59-b221-450c2a880c49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5263792485850741"
+       "0.4429391642699086"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "id": "f3be285c-e94f-4fee-b75a-5f0b48fd4fff",
    "metadata": {},
    "outputs": [
@@ -1464,10 +1494,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.0187, 0.0, 0.0, 0.0)"
+       "(0.0199, 0.0, 0.0, 0.0)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
