add output logs

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -1505,6 +1505,40 @@
    "source": [
     "calc_bleu(test_data_single_large)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "01ac5125-f0b3-447d-9b23-ca0cc9d60add",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "to_csv_pd = []\n",
+    "for test_datas in [test_data_sequential, test_data_single_large, test_data_single_base]:\n",
+    "    answer_dis, inter_dis, answer_pred_dis, inter_pred_dis = calc_distractor_analysis(test_datas)\n",
+    "    to_csv_pd.append([np.average(answer_dis), np.average(inter_dis), np.average(answer_pred_dis), np.average(inter_pred_dis)])\n",
+    "\n",
+    "df = pd.DataFrame(to_csv_pd)\n",
+    "\n",
+    "df.to_csv('output_raw.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "334235af-587f-4150-92c5-4481371b2d64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_csv_pd = []\n",
+    "for test_datas in [test_data_sequential, test_data_single_large, test_data_single_base]:\n",
+    "    to_csv_pd.append(calc_bleu(test_datas))\n",
+    "\n",
+    "df = pd.DataFrame(to_csv_pd)\n",
+    "\n",
+    "df.to_csv('output_bleu.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
